jdk版本兼容更新，修改构建配置